# ccdi-federation-api

./: .gitignore  .vale.ini  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.dev.md  README.md  RELEASE.md  index.html  swagger.yml
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/ccdi-cde/: Cargo.toml
crates/ccdi-cde/src/: lib.rs  v1.rs  v2.rs  v4.rs
crates/ccdi-cde/src/parse/cde/: entity.rs  member.rs
crates/ccdi-cde/src/v1/: deposition.rs  namespace.rs  sample.rs  subject.rs
crates/ccdi-cde/src/v1/deposition/: dbgap_phs_accession.rs
crates/ccdi-cde/src/v1/file/: checksum.rs  identifier.rs  size.rs
crates/ccdi-cde/src/v1/namespace/: study_funding_id.rs  study_id.rs  study_short_title.rs
crates/ccdi-cde/src/v1/organization/: institution.rs
crates/ccdi-cde/src/v1/sample/: diagnosis_category.rs  library_strategy.rs  specimen_molecular_analyte_type.rs  tissue_type.rs  tumor_tissue_morphology.rs
crates/ccdi-cde/src/v1/subject/: age_at_vital_status.rs  name.rs  race.rs
crates/ccdi-cde/src/v2/: namespace.rs  sample.rs  subject.rs
crates/ccdi-cde/src/v2/namespace/: study_short_title.rs
crates/ccdi-cde/src/v2/sample/: library_selection_method.rs  preservation_method.rs  tissue_type.rs  tumor_grade.rs
crates/ccdi-cde/src/v2/subject/: ethnicity.rs
crates/ccdi-cde/src/v4/organization/: institution.rs
crates/ccdi-curate/src/: http.rs  main.rs  uberon.rs
crates/ccdi-curate/src/uberon/: graph.rs
crates/ccdi-models/: Cargo.toml
crates/ccdi-models/src/: lib.rs  sample.rs  subject.rs  url.rs
crates/ccdi-models/src/file/: identifier.rs  metadata.rs
crates/ccdi-models/src/file/metadata/: checksums.rs
crates/ccdi-models/src/gateway/: link.rs
crates/ccdi-models/src/metadata/: fields.rs
crates/ccdi-models/src/metadata/common/: metadata.rs
crates/ccdi-models/src/metadata/field/: description.rs  details.rs  owned.rs  unowned.rs
crates/ccdi-models/src/namespace/: description.rs  metadata.rs
crates/ccdi-models/src/namespace/identifier/: name.rs
crates/ccdi-models/src/organization/: identifier.rs  metadata.rs  name.rs
crates/ccdi-models/src/sample/: identifier.rs  metadata.rs
crates/ccdi-models/src/sample/metadata/: builder.rs  (+3 more)
crates/ccdi-models/src/subject/: kind.rs  metadata.rs
crates/ccdi-openapi/: Cargo.toml
crates/ccdi-openapi/src/: api.rs
crates/ccdi-server/: Cargo.toml
crates/ccdi-server/src/: filter.rs  paginate.rs  responses.rs  routes.rs
crates/ccdi-server/src/filter/: file.rs  sample.rs  sample_diagnosis.rs  subject.rs  subject_diagnosis.rs
crates/ccdi-server/src/params/: filter.rs
crates/ccdi-server/src/responses/: file.rs  metadata.rs  namespace.rs  organization.rs  sample.rs  subject.rs  summary.rs
crates/ccdi-server/src/routes/: file.rs  info.rs  metadata.rs  namespace.rs  organization.rs  sample.rs  sample_diagnosis.rs  subject.rs  subject_diagnosis.rs
crates/ccdi-spec/: Cargo.toml
crates/ccdi-spec/src/: main.rs
crates/ccdi-spec/src/utils/: markdown.rs
(+88 files in other folders)
