[workspace]
members = [
    "ccdi-cde",
    "ccdi-curate",
    "ccdi-models",
    "ccdi-openapi",
    "ccdi-server",
    "ccdi-spec",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
version = "1.1.0"

[workspace.dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.2.2"
color-eyre = "0.6.3"
csv = "1.3.0"
eyre = "0.6.12"
indexmap = "2.0.2"
introspect = { version = "0.1.1", git = "https://github.com/claymcleod/introspect.git" }
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
mime = "0.3.17"
nonempty = { version = "0.9.0", features = ["serialize"] }
ordered-float = { version = "4.0", features = ["serde"] }
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
serde_test = "1.0.176"
serde_with = "3.4.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
utoipa = { version = "4.0.0", features = [
    "actix_extras",
    "chrono",
    "indexmap",
    "preserve_order",
    "preserve_path_order",
    "yaml",
] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
