[package]
name = "ccdi-models"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ccdi-cde = { path = "../ccdi-cde" }
chrono.workspace = true
indexmap.workspace = true
introspect.workspace = true
lazy_static.workspace = true
macropol = "0.1.3"
nonempty.workspace = true
ordered-float.workspace = true
rand.workspace = true
regex.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_test.workspace = true
url.workspace = true
utoipa.workspace = true

[features]
default = []
all-anatomical-site = []
